# FallGuard-Edge

./: .gitignore  CMakeLists.txt  README.md
docs/: ENGINEERING_NOTEBOOK.md  PROJECT_CONTEXT.md  ROADMAP.md
docs/adr/: ADR-0003-Image-Pipeline.md
firmware/esp32/: platformio.ini
firmware/esp32/src/: main.cpp
shared/: CMakeLists.txt  library.json
shared/include/fallguard/: alert_manager.hpp  camera.hpp  config.hpp  core.hpp  decision_engine.hpp  frame.hpp  logger.hpp  tinyml_engine.hpp  vision_engine.hpp
shared/include/fallguard/image/: bounding_box.hpp  connected_components.hpp  image_processor.hpp  morphology.hpp
shared/src/: alert_manager.cpp  camera.cpp  config.cpp  decision_engine.cpp  frame.cpp  logger.cpp  tinyml_engine.cpp  vision_engine.cpp
simulator/: CMakeLists.txt
simulator/src/: main.cpp
simulator/src/image/: bounding_box.cpp  connected_components.cpp  image_processor.cpp  morphology.cpp
tests/: CMakeLists.txt  foundation_tests.cpp
tests/fixtures/: lying_16.pgm  upright_16.pgm
